--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Your Name (maybe?)
 
 # URL
 url: http://your-site.com
-baseurl: '/simple-portfolio'
+baseurl: ''
 permalink: :title/
 include: ['_pages']
 
